2007-10-05  Lars Knoll  <lars@trolltech.com>

        Add a dummy plugin to DRT  to fix fast/dom/Window/Plug-Ins.html.
        Add support for layoutTextController.setCanOpenWindows() to DRT
        fixing another 2 test cases in fast/dom/Window.

        Reviewed by Maciej.

        * platform/qt/Skipped:

2007-10-04  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Darin.

        Make traversal tests dumpAsText.

        * platform/mac/traversal: Removed.
        * platform/mac/traversal/node-iterator-001-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-001-expected.png: Removed.
        * platform/mac/traversal/node-iterator-001-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-002-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-002-expected.png: Removed.
        * platform/mac/traversal/node-iterator-002-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-003-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-003-expected.png: Removed.
        * platform/mac/traversal/node-iterator-003-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-004-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-004-expected.png: Removed.
        * platform/mac/traversal/node-iterator-004-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-005-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-005-expected.png: Removed.
        * platform/mac/traversal/node-iterator-005-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-006-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-006-expected.png: Removed.
        * platform/mac/traversal/node-iterator-006-expected.txt: Removed.
        * platform/mac/traversal/node-iterator-007-expected.checksum: Removed.
        * platform/mac/traversal/node-iterator-007-expected.png: Removed.