@@ -1,3 +1,13 @@
+2007-10-05  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by olliej.
+
+        fix a hang in editing/selection/extend-by-word-002.html
+
+        * platform/qt/TextBreakIteratorQt.cpp:
+        (WebCore::CharBreakIteratorQt::next):
+        (WebCore::characterBreakIterator):
+
 2007-10-04  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Oliver.
